# vita

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  models.yaml  pyproject.toml  pytest.ini  requirements.txt  requirements_arm.txt  setup.py
.github/workflows/: test.yml
examples/: CLI_EXAMPLES.md  use_bark.py  use_kani.py  use_kokoro.py  use_neuttsair.py  use_streaming.py  use_supertonic.py  use_vita.py  use_xtts.py
tests/: test_cli.py  test_kokoro.py  test_xtts.py
vita/: __init__.py  __main__.py  bark.py  base.py  convert_format.py  coqui_xtts.py  kani.py  kokoro.py  model_config.py  neuttsair.py  stream_audio.py  supertonic.py  utils.py
