[tool.poetry]
name = "vita"
version = "0.3.0"
description = "VITA - Voice Integration Toolkit for Applications"
authors = ["Moulish <your-email@example.com>"]
license = "Apache-2.0"
homepage = "https://github.com/moulish-dev/vita"
repository = "https://github.com/moulish-dev/vita"
readme = "README.md"
packages = [{ include = "vita" }]

[tool.poetry.dependencies]
python = "3.11.14"
kokoro = ">=0.9.2"
soundfile = "*"

[tool.poetry.scripts]
vita = "vita.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
